# android-toolchain

./: .gitignore  android-toolchain-wrapper.cmake  conandata.yml  conanfile.py
.ci/: build.py
.ci/profiles/: armv7  armv8  x86  x86_64
.github/workflows/: main.yml
test_package/: CMakeLists.txt  conanfile.py  example.cpp
toolchain_check/: run-android-check.py  run-native-check.py
toolchain_check/executable/: CMakeLists.txt  conanfile.py
toolchain_check/executable/cmake/: Config.cmake.in  install_helper.cmake  package_helper.cmake  version.h.in
toolchain_check/executable/include/dce/: binary.h
toolchain_check/executable/src/: binary.cpp  main.cpp
toolchain_check/profiles/: armv7  armv8  x86  x86_64
